// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Typography <Body /> renders correctly 1`] = `
<DocumentFragment>
  .emotion-0 {
  font-family: Graphik,"Helvetica Neue",Helvetica,Arial,Verdana,sans-serif;
  font-size: 1rem;
  font-weight: 400;
  line-height: 1.5;
  color: rgb(36,28,21);
  margin: 0;
  word-break: break-word;
  -webkit-hyphens: auto;
  -moz-hyphens: auto;
  -ms-hyphens: auto;
  hyphens: auto;
}

<p
    class="emotion-0"
  >
    Body
  </p>
</DocumentFragment>
`;

exports[`Typography <BodyBold /> renders correctly 1`] = `
<DocumentFragment>
  .emotion-0 {
  font-family: Graphik,"Helvetica Neue",Helvetica,Arial,Verdana,sans-serif;
  font-size: 1rem;
  font-weight: 500;
  -webkit-letter-spacing: -0.0125rem;
  -moz-letter-spacing: -0.0125rem;
  -ms-letter-spacing: -0.0125rem;
  letter-spacing: -0.0125rem;
  line-height: 1.5;
  color: rgb(36,28,21);
  margin: 0;
  word-break: break-word;
  -webkit-hyphens: auto;
  -moz-hyphens: auto;
  -ms-hyphens: auto;
  hyphens: auto;
}

<strong
    class="emotion-0"
  >
    Body Bold
  </strong>
</DocumentFragment>
`;

exports[`Typography <HeadingFour /> renders correctly 1`] = `
<DocumentFragment>
  .emotion-0 {
  font-family: Graphik,"Helvetica Neue",Helvetica,Arial,Verdana,sans-serif;
  font-size: 1.25rem;
  font-weight: 400;
  line-height: 1.25;
  color: rgb(36,28,21);
  margin: 0;
  word-break: break-word;
  -webkit-hyphens: auto;
  -moz-hyphens: auto;
  -ms-hyphens: auto;
  hyphens: auto;
}

<h4
    class="emotion-0"
  >
    Heading Four
  </h4>
</DocumentFragment>
`;

exports[`Typography <HeadingOne /> renders correctly 1`] = `
<DocumentFragment>
  .emotion-0 {
  font-family: "Cooper Light",Georgia,Times,"Times New Roman",serif;
  font-size: 2.75rem;
  font-weight: 300;
  line-height: 1.090909091;
  text-transform: capitalize;
  color: rgb(36,28,21);
  margin: 0;
  word-break: break-word;
  -webkit-hyphens: auto;
  -moz-hyphens: auto;
  -ms-hyphens: auto;
  hyphens: auto;
}

@media screen and (min-width:40em) {
  .emotion-0 {
    font-size: 3.375rem;
  }
}

<h1
    class="emotion-0"
  >
    Heading One
  </h1>
</DocumentFragment>
`;

exports[`Typography <HeadingThree /> renders correctly 1`] = `
<DocumentFragment>
  .emotion-0 {
  font-family: Graphik,"Helvetica Neue",Helvetica,Arial,Verdana,sans-serif;
  font-size: 1.75rem;
  font-weight: 400;
  -webkit-letter-spacing: -0.0125rem;
  -moz-letter-spacing: -0.0125rem;
  -ms-letter-spacing: -0.0125rem;
  letter-spacing: -0.0125rem;
  line-height: 1.25;
  text-transform: capitalize;
  color: rgb(36,28,21);
  margin: 0;
  word-break: break-word;
  -webkit-hyphens: auto;
  -moz-hyphens: auto;
  -ms-hyphens: auto;
  hyphens: auto;
}

@media screen and (min-width:40em) {
  .emotion-0 {
    font-size: 2.375rem;
  }
}

<h3
    class="emotion-0"
  >
    Heading Three
  </h3>
</DocumentFragment>
`;

exports[`Typography <HeadingTwo /> renders correctly 1`] = `
<DocumentFragment>
  .emotion-0 {
  font-family: Graphik,"Helvetica Neue",Helvetica,Arial,Verdana,sans-serif;
  font-size: 2.25rem;
  font-weight: 400;
  -webkit-letter-spacing: -0.03125rem;
  -moz-letter-spacing: -0.03125rem;
  -ms-letter-spacing: -0.03125rem;
  letter-spacing: -0.03125rem;
  line-height: 1.25;
  text-transform: capitalize;
  color: rgb(36,28,21);
  margin: 0;
  word-break: break-word;
  -webkit-hyphens: auto;
  -moz-hyphens: auto;
  -ms-hyphens: auto;
  hyphens: auto;
}

@media screen and (min-width:40em) {
  .emotion-0 {
    font-size: 2.875rem;
  }
}

<h2
    class="emotion-0"
  >
    Heading Two
  </h2>
</DocumentFragment>
`;

exports[`Typography <Label /> renders correctly 1`] = `
<DocumentFragment>
  .emotion-0 {
  font-family: Graphik,"Helvetica Neue",Helvetica,Arial,Verdana,sans-serif;
  font-size: 0.875rem;
  font-weight: 500;
  line-height: 1.5;
  color: rgb(36,28,21);
  margin: 0;
  word-break: break-word;
  -webkit-hyphens: auto;
  -moz-hyphens: auto;
  -ms-hyphens: auto;
  hyphens: auto;
}

<span
    class="emotion-0"
  >
    Label
  </span>
</DocumentFragment>
`;
